tests/cases/compiler-development/artifact/errors/diagnostic-double-move.ari
fn make_owned(value: i64) -> own i64 {
  return value;
}

fn main() -> i64 {
  let token: own i64 = make_owned(1);
  let first = token;
  let second = token;
  drop first;
  drop second;
  return 0;
}
